<resources>
    <string name="app_name">SavvyTutor</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="login"><u>Login</u></string>
    <string name="registerUser"><u>Register An Account</u></string>

    <string name="select_profile_picture">Select Profile Picture</string>


    <!--    Arrays for Spinner-->
    <string-array name= "SubjectArrary">
        <item>Choose subject</item>
        <item>Maths</item>
        <item>English</item>
        <item>Irish</item>
        <item>Art</item>
        <item>Home Ec</item>
        <item>Business Studies</item>
        <item>Accounting</item>
        <item>French</item>
        <item>German</item>
        <item>History</item>
        <item>Geography</item>
        <item>Music</item>
        <item>Physics</item>
        <item>Biology</item>
        <item>Ag Science</item>
        <item>Chemistry</item>

    </string-array>

    <string-array name= "LevelArrary">
        <item>Choose level</item>
        <item>Junior Cert</item>
        <item>Leaving Cert</item>
        <item>Junior Cert + Leaving Cert</item>
        <item>Other</item>
    </string-array>

    <string-array name= "RoleArrary">
        <item>Choose Role</item>
        <item>Parent</item>
        <item>Tutor</item>
    </string-array>

</resources>