<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:id="@+id/RegisterSV"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registerFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="175sp"
        android:layout_marginTop="100sp"
        android:text="SavvyTutor"
        android:textColor="@color/blackText"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/registerLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80sp"
        android:layout_marginTop="80sp"
        android:src="@mipmap/ic_logo_round" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75sp"
        android:layout_marginTop="175sp"
        android:singleLine="false"
        android:text="@string/registerUser"
        android:textColor="@color/blackText"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="240sp"
        android:text="E-Mail*"
        android:textColor="@color/blackText"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="290sp"
        android:layout_height="35sp"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="270sp"
        android:background="@drawable/rounded_corner"
        android:hint="Enter E-Mail Here"
        android:inputType="text" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="310sp"
        android:text="Password*"
        android:textColor="@color/blackText"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="290sp"
        android:layout_height="35sp"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="337sp"
        android:background="@drawable/rounded_corner"
        android:hint="Enter Password Here"
        android:inputType="text" />







    <Spinner
        android:id="@+id/chooseRole"
        android:layout_width="290sp"
        android:layout_height="35sp"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="410sp"
        android:background="@drawable/rounded_corner"
        android:entries="@array/RoleArrary"
        android:paddingLeft="2sp"
        android:theme="@style/spinnerTheme" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="380sp"
        android:text="Select Role*"
        android:textColor="@color/blackText"
        android:textSize="20sp"
        android:textStyle="bold" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="450sp"
        android:text="Phone Number*"
        android:textColor="@color/blackText"
        android:textSize="20sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/registerUsername"
        android:layout_width="290sp"
        android:layout_height="35sp"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="480sp"
        android:background="@drawable/rounded_corner"
        android:hint="Enter Phone Number Here"
        android:inputType="text" />


    <ImageView
        android:id="@+id/registershowprofilepic"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_marginLeft="125sp"
        android:layout_marginTop="375sp"
        />

    <Button
        android:id="@+id/addprofilepic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="530sp"
        android:backgroundTint="@color/whiteText"
        android:text="Select Profile Picture "
        android:textColor="@color/blackText" />

    <Button
        android:id="@+id/registerbtn"
        android:layout_width="325sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="590sp"
        android:backgroundTint="@color/whiteText"
        android:text="Register"
        android:textColor="@color/blackText" />


    <TextView
        android:id="@+id/goToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="675sp"
        android:text="Already Have An Account? Sign in here!"
        android:textColor="@color/blackText"
        android:textSize="15sp" />


</RelativeLayout>
</ScrollView>